2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Added new helper
	method.

2008-10-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs:
	* MonoDevelop.Xml.StateEngine/Parser.cs:
	* MonoDevelop.Xml.StateEngine/XmlTagState.cs:
	* MonoDevelop.Xml.StateEngine/XmlCDataState.cs:
	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlCommentState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs: Changed
	Xml StateEngine from offset-based positions to line/column positions.

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Fix recursive enumerables. Fix
	bug that prevented tree being built.

	* MonoDevelop.Xml.StateEngine/Parser.cs: Make line, col accessible.
	Write out errors in debug string.

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Catch multiple root nodes.

	* MonoDevelop.Xml.StateEngine/XDom.cs: Add field to XDocument for root
	node. Add some element-enumerating methods to XElement. Rename
	RecursiveNodes to AllDescendentNodes.

	* MonoDevelop.Xml.StateEngine/Parser.cs: Track line/col so we can use
	the same error class as MonoDevelop.Projects.Dom.

2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Don't try to create
	completion list when the array of source elements is null. Fixes
	exception in XML editor.

2008-10-21  Ryan Bair  <ryandbair@gmail.com>

	* MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	  Capture full name of opening tag. Don't read back past an end bracket.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>
