@@ -1,5 +1,9 @@
 2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.
+
+2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Added new helper
 	method.
 
